--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,14 @@
   padding: 0;
 }
 
+.MealsLoading{
+  text-align: center;
+}
+
+.MealsError {
+  text-align: center;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
